# langchain-chatbot

./: README.md  package-lock.json
fastapi/: main.py  pyproject.toml  requirements.txt
flask/: app.py  requirements.txt
nextjs-app/: package-lock.json  package.json
nextjs-app/app/: actions.ts  layout.tsx  page.tsx
nextjs-app/app/api/load_url/: route.ts
nextjs-app/app/api/question/: route.ts
nextjs-app/app/components/: fastapi_check.tsx  flask_check.tsx  url_loader.tsx
nextjs-app/app/components/chat/: chat.tsx  history.tsx
